# yt-mp3-service

./: .gitignore  BUILD.md  Cargo.toml  DEVELOP.md  README.md  RELEASE.md  SERVICE.md  build.sh  service.sh  start.bat  status.bat  status.sh  stop.bat  stop.sh
.claude/: settings.local.json
certs/: cert.pem  key.pem
scripts/: service.sh  start.bat  start.sh  status.bat  status.sh  stop.bat
src/: .main.rs.swp  main.rs
