[package]
name = "yt-mp3-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rustls = "0.21"
rustls-pemfile = "1.0"
rcgen = "0.11"
time = "0.3"

[[bin]]
name = "yt-mp3"
path = "src/main.rs"

[[bin]]
name = "cert-gen"
path = "src/bin/cert-gen.rs"
